--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix Pakistan – Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
 
     <div class="main">
         <nav>
-            <span><img width="53" src="./bg.jpg" alt=""></span>
+            <span><img width="53" src="./logo.svg" alt=""></span>
             <div>
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign In</button>
@@ -47,3 +47,10 @@
         </div>
     </section>
     <div class="separation"></div>
+
+    <section class="first second">
+
+        <div class="secImg">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
+
+        </div>
